css fix to pad body so content not behind sticky footer

--- a/ditto/static/css/project.css
+++ b/ditto/static/css/project.css
@@ -44,7 +44,8 @@
 
 /* Move down content because we have a fixed navbar that is 100px tall */
 body {
-  padding-top: 110px;
+    padding-top: 110px;
+    padding-bottom: 45px;
 }
 
 
